# cpp-plugin-example

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  plugin.cpp  plugin.h  talker.cpp  talker.h
plugins/english/: CMakeLists.txt  english.cpp
